<resources>
    <string name="app_name">Weather</string>
    <string name="city">City</string>
    <string name="temperature">0</string>
    <string name="day">Day</string>
    <string name="minimum_temperature">-1</string>
    <string name="maximum_temperature">1</string>
    <string name="hour">Hour</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="sunrise">SUNRISE</string>
    <string name="sunset">SUNSET</string>
    <string name="chance_of_rain">CHANCE OF RAIN</string>
    <string name="humidity">HUMIDITY</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="feels_like">FEELS LIKE</string>
</resources>
